@@ -1,2 +1,3 @@
 .idea/*
 .vscode/*
+mod.dev.info
