@@ -7,4 +7,4 @@ icon=icon.png
 versionMin=42.0
 url=https://github.com/amescodes/PZPI2AB
 authors=amescodes
-modversion=42.1.0.2
+modversion=42.1.0.3
