@@ -7,4 +7,4 @@ icon=icon.png
 versionMin=41.0
 url=https://github.com/amescodes/PZPI2AB
 authors=amescodes
-modversion=41.1.0.1
+modversion=41.1.0.2
