@@ -13,6 +13,12 @@
 [ ------ ]
 
 
+
+[ 2/1/26 ]
+- Fix bug from moveables place action that was canceled 
+[ ------ ]
+
+
 [ ALERT_CONFIG ]
 link1 = Ko-fi = https://steamcommunity.com/linkfilter/?u=https://ko-fi.com/amescodes,
 link2 = Workshop = https://steamcommunity.com/id/ames_games/myworkshopfiles/?appid=108600,
